css/application.css
/*
 * Base colours:
 *
 * pp dunkelblau:
 * cmyk: c86, m61, y45, k41
 * rgb: r41, g67, b83
 * hex: #294353
 *
 * pp hellblau:
 * cmyk:c66, m36, y26, k8
 * rgb: r96, g135, b158
 * hex: #60879e
 *
 * pp hellgrün:
 * cmyk: c50, m15, y100, k0
 * rgb: r150, g174, b36
 * hex: #96ae24
 *
 */

@font-face {
  font-family: Anton;
  src: url(../fonts/anton/Anton-Regular.ttf);
}

@font-face {
  font-family: Roboto;
  src: url(../fonts/roboto/Roboto-Regular.ttf);
}

.navbar-item {
  font-family: Anton;
  font-size: 1.2rem;
}

.navbar-brand img {
  max-height: 75px;
  height: 75px;
  margin: 10px 100px;
}

.navbar-initial img {
  height: 30px;
  max-height: 30px;
  margin-right: 7px;
  vertical-align: middle;
}

h1.title, h2,title {
  font-family: Anton;
}

h1.title {
  position: absolute;
  padding: 1rem;
  left: -50rem;
  padding-left: 50rem;
  background-color: #294353;
  color: #fff !important;
}

h1.title + * {
  margin-top: 6rem;
}

p {
  font-family: Roboto;
}

#willkommen p {
  max-width: 500px;
}

span.small {
  font-size: 0.75rem;
}

.content a {
  text-decoration: underline;
}

.content a:hover {
  text-decoration: none;
}

#project-description {
  min-height: 50vh;
}

#project-description .content {
  display: none;
}

#project-description .content:first-child {
  display: block;
}

#quotes .media {
  border-top: none;
  margin-top: 0;
  display: none;
}

#quotes .media:first-child {
  display: flex;
}

#quotes .title {
  font-size: 1.1rem;
  line-height: 1.4;
  }

#quotes .subtitle {
  font-size: 0.80rem;
}

.footer {
  background-color: #333;
  color: #ccc;
}

.footer a {
  color: #ccc;
}

